# lambda-hello-discord

./: app.py  pyproject.toml  template.yaml
.github/workflows/: deploy.yml
